--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^3.0.1",
     "pg": "^8.11.2",
     "sequelize": "^6.32.1",
+    "socket.io": "^4.7.1",
     "uuidv4": "^6.2.13"
   }
 }
